--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -353,7 +353,7 @@
                     <tr class="singleRow">
                       <td class="image product-thumbnail col-1">
                         <img
-                          src="<%= product.productId.images[0].path%>"
+                          src="<%= product.productId.images[0]?.path%>"
                           alt="product image"
                         />
                       </td>
