--- a/views/user/partials/header.ejs
+++ b/views/user/partials/header.ejs
@@ -110,7 +110,7 @@
               <div class="header-action-right">
                 <div class="header-action-2">
                   <div class="header-action-icon-2">
-                    <a href="shop-wishlist.html">
+                    <a href="/user/load-wishlist">
                       <img
                         class="svgInject"
                         alt="Evara"
@@ -185,16 +185,10 @@
                       ></a>
                     </li>
                     <li>
+                      <a href="#">Offers</a>
+                    </li>
+                    <li>
                       <a href="page-about.html">About</a>
-                    </li>
-                    <li>
-                      <a href="shop-grid-right.html">New <i class=""></i></a>
-                    </li>
-                    <li>
-                      <a href="#">Deals</a>
-                    </li>
-                    <li>
-                      <a href="page-contact.html">Contact</a>
                     </li>
                   </ul>
                 </nav>
